force-app/main/default/objects/Knowledge__kav/fields/Is_Riverstone_Specific__c.field-meta.xml
<CustomField>
    <fullName>Is_Riverstone_Specific__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Riverstone Specific</label>
    <type>Checkbox</type>
</CustomField>