force-app/main/default/objects/Knowledge__kav/fields/SDO_Commerce_Visible_in_Commerce__c.field-meta.xml
<CustomField>
    <fullName>SDO_Commerce_Visible_in_Commerce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Changed field api name from SDO_Commerce_Visible_in_Commerce_Sites to avoid issue with Data Streams character limits.</description>
    <label>Visible in Commerce Sites</label>
    <type>Checkbox</type>
</CustomField>