force-app/main/default/objects/Knowledge__kav/recordTypes/EDU_Admissions_HigherEd_Article.recordType-meta.xml
<RecordType>
    <fullName>EDU_Admissions_HigherEd_Article</fullName>
    <active>true</active>
    <description>Article for community users to read. Created by Solution Development Team 2022 when initially moving to core.</description>
    <label>Admissions - HigherEd - Article</label>
</RecordType>