force-app/main/default/objects/Knowledge__kav/recordTypes/Education_Cloud.recordType-meta.xml
<RecordType>
    <fullName>Education_Cloud</fullName>
    <active>true</active>
    <label>Education Cloud</label>
</RecordType>