force-app/main/default/objects/Knowledge__kav/listViews/Education_Cloud_Knowledge.listView-meta.xml
<ListView>
    <fullName>Education_Cloud_Knowledge</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Education_Cloud</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>1/30/2025 12:00 AM</value>
    </filters>
    <label>Education Cloud Knowledge</label>
</ListView>