force-app/main/default/objects/Knowledge__kav/listViews/Riverstone_Knowledge.listView-meta.xml
<ListView>
    <fullName>Riverstone_Knowledge</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Riverstone_Specific__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Riverstone Knowledge</label>
</ListView>