force-app/main/default/objects/Knowledge__kav/listViews/SDO_Commerce_FAQs.listView-meta.xml
<ListView>
    <fullName>SDO_Commerce_FAQs</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>URL_NAME</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SDO_Commerce_Visible_in_Commerce__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Commerce FAQs</label>
</ListView>