force-app/main/default/objects/Knowledge__kav/listViews/SDO_Customer_FAQs.listView-meta.xml
<ListView>
    <fullName>SDO_Customer_FAQs</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>FIRST_PUBLISHED_DATE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>ABSTRACT</columns>
    <columns>URL_NAME</columns>
    <columns>Article_Type_Icon_URL__c</columns>
    <columns>Featured_in_Communities__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>IS_CHANNEL_PKB</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>IS_CHANNEL_CSP</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.SDO_Knowledge_FAQ</value>
    </filters>
    <label>Customer FAQs</label>
</ListView>