force-app/main/default/objects/Knowledge__kav/listViews/SDO_Featued_Knowledge_Articles.listView-meta.xml
<ListView>
    <fullName>SDO_Featued_Knowledge_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>FIRST_PUBLISHED_DATE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>ABSTRACT</columns>
    <columns>URL_NAME</columns>
    <columns>Article_Type_Icon_URL__c</columns>
    <columns>RECORD_TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>IS_CHANNEL_PKB</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>Featured_in_Communities__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Featured Knowledge Articles</label>
</ListView>