force-app/main/default/objects/Knowledge__kav/listViews/Student_Articles.listView-meta.xml
<ListView>
    <fullName>Student_Articles</fullName>
    <booleanFilter>(1 OR 2 OR 3 OR 4)</booleanFilter>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>LANGUAGE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TITLE</field>
        <operation>notContain</operation>
        <value>Application</value>
    </filters>
    <filters>
        <field>TITLE</field>
        <operation>notContain</operation>
        <value>Applying</value>
    </filters>
    <filters>
        <field>TITLE</field>
        <operation>notContain</operation>
        <value>Deadline</value>
    </filters>
    <filters>
        <field>TITLE</field>
        <operation>notContain</operation>
        <value>Checklist</value>
    </filters>
    <label>Student Articles</label>
</ListView>